--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,9 +23,15 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
-                  <li><a href="{{ url_for('home.dashboard') }}">Dashboard</a></li>
-                  <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
-                  <li><a><i class="fa fa-user"></i>  Hi, {{ current_user.username }}!</a></li>
+                  {% if current_user.is_admin %}
+                    <li><a href="{{ url_for('home.admin_dashboard') }}">Dashboard</a></li>
+                    <li><a href="{{ url_for('admin.list_cities') }}">Cities</a></li>
+                    <li><a href="{{ url_for('admin.list_restaurants') }}">Restaurants</a></li>
+                  {% else %}
+                    <li><a href="{{ url_for('home.dashboard') }}">Dashboard</a></li>
+                  {% endif %}
+                    <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
+                    <li><a><i class="fa fa-user"></i>  Hi, {{ current_user.username }}!</a></li>
                 {% else %}
                   <li><a href="{{ url_for('home.homepage') }}">Home</a></li>
                   <li><a href="{{ url_for('auth.register') }}">Register</a></li>
@@ -55,7 +61,7 @@
                         <li><a href="{{ url_for('auth.login') }}">Login</a></li>
                       {% endif %}
                     </ul>
-                    <p class="copyright text-muted small">Copyright © 2016. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright © 2017. All Rights Reserved</p>
                 </div>
             </div>
         </div>
