--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,6 +27,7 @@
                     <li><a href="{{ url_for('home.admin_dashboard') }}">Dashboard</a></li>
                     <li><a href="{{ url_for('admin.list_cities') }}">Cities</a></li>
                     <li><a href="{{ url_for('admin.list_restaurants') }}">Restaurants</a></li>
+                    <li><a href="{{ url_for('admin.list_users') }}">Users</a></li>
                   {% else %}
                     <li><a href="{{ url_for('home.dashboard') }}">Dashboard</a></li>
                   {% endif %}
