Can add Cities, Restaurants, and Happy Hours

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -11,11 +11,11 @@ body, h1, h2, h3 {
 }
 
 a, .navbar-default .navbar-brand, .navbar-default .navbar-nav>li>a {
-  color: #aec251;
+  color: #174185;
 }
 
 a:hover, .navbar-default .navbar-brand:hover, .navbar-default .navbar-nav>li>a:hover {
-  color: #687430;
+  color: #0A68FF;
 }
 
 footer {
@@ -32,21 +32,22 @@ p.copyright {
     margin: auto;
     color: #687430;
     background-color: #e6ecca;
-    border-color: #aec251;
+    border-color: #174185;
 }
 
 .btn-default {
-    border-color: #aec251;
-    color: #aec251;
+    border-color: #174185;
+    color: #174185;
 }
 
 .btn-default:hover {
-    background-color: #aec251;
+    background-color: #174185;
+    color: #ffffff
 }
 
-.center {
+.center {   
     margin: auto;
-    width: 50%;
+    width: 80%;
     padding: 10px;
 }
 
