--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>{{ title }} | Project Dream Team</title>
+    <title>{{ title }} | Drunkan's Deals</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
@@ -18,7 +18,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand topnav" href="{{ url_for('home.homepage') }}">Project Dream Team</a>
+              <a class="navbar-brand topnav" href="{{ url_for('home.homepage') }}">Drunkan's Deals</a>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
@@ -29,14 +29,18 @@
                     <li><a href="{{ url_for('admin.list_restaurants') }}">Restaurants</a></li>
                     <li><a href="{{ url_for('admin.list_users') }}">Users</a></li>
                   {% else %}
-                    <li><a href="{{ url_for('home.dashboard') }}">Dashboard</a></li>
+                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="#">Cities</a></li>
+                    <li><a href="#">Restaurants</a></li>
+                    <li><a href="#">Happy Hours</a></li>
                   {% endif %}
                     <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
                     <li><a><i class="fa fa-user"></i>  Hi, {{ current_user.username }}!</a></li>
                 {% else %}
-                  <li><a href="{{ url_for('home.homepage') }}">Home</a></li>
-                  <li><a href="{{ url_for('auth.register') }}">Register</a></li>
-                  <li><a href="{{ url_for('auth.login') }}">Login</a></li>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Cities</a></li>
+                  <li><a href="#">Restaurants</a></li>
+                  <li><a href="#">Happy Hours</a></li>
                 {% endif %}
               </ul>
           </div>
