--- a/app/templates/admin/restaurants/restaurants.html
+++ b/app/templates/admin/restaurants/restaurants.html
@@ -18,24 +18,24 @@
             <table class="table table-striped table-bordered">
               <thead>
                 <tr>
-                  <th width="15%"> Name </th>
-                  <th width="40%"> Description </th>
-                  <th width="15%"> Employee Count </th>
-                  <th width="15%"> Edit </th>
-                  <th width="15%"> Delete </th>
+                  <th width="10%"> Name </th>
+                  <th width="10%"> City </th>
+                  <th width="50%"> Deal </th>
+                  <th width="10%"> Menu </th>
+                  <th width="10%"> Edit </th>
+                  <th width="10%"> Delete </th>
                 </tr>
               </thead>
               <tbody>
               {% for restaurant in restaurants %}
                 <tr>
-                  <td> {{ restaurant.name }} </td>
-                  <td> {{ restaurant.description }} </td>
+                  <td><a href="{{ url_for('admin.list_restaurant_details', id=restaurant.id) }}">
+                      {{ restaurant.name }}
+                  </a></td>
+                  <td> {{ restaurant.city.name }} </td>
+                  <td> {{ restaurant.deal }} </td>
                   <td>
-                    {% if restaurant.employees %}
-                      {{ restaurant.employees.count() }}
-                    {% else %}
-                      0
-                    {% endif %}
+                      <a href="{{ restaurant.menu }}" target="_blank">Menu</a>
                   </td>
                   <td>
                     <a href="{{ url_for('admin.edit_restaurant', id=restaurant.id) }}">
